# git-superprune

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml
.circleci/: config.yml
.github/workflows/: rust.yml
src/: branch.rs  main.rs
test_files/: branch-results.txt
