[package]
name = "git-superprune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
git-version = "0.3.9"
regex = { version = "1.10.5", features = ["logging"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await", "release_max_level_info"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
