[package]
name = "git-superprune"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A tool to prune merged remote branches from the local repository."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive", "color", "env"] }
color-eyre = "0.6.3"
const_format = "0.2.32"
git-version = "0.3.9"
git2 = { version = "0.18.3", features = [
	"vendored-libgit2",
	"vendored-openssl",
] }
regex = { version = "1.10.5", features = ["logging"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", features = [
	"async-await",
	"release_max_level_info",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
	"run-cargo-check",
	"run-cargo-clippy",
	"run-cargo-fmt",
] }

[features]
default = []
extended_tests = []
